# VoiceNavigator

./: app.py  pyproject.toml  requirements.txt
src/appwhisper/: app.py
src/llm/: requirements.txt
