[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "syeda", email = "sbtshakeel61@gmail.com" }
]
requires-python = ">= 3.11"
dependencies = []

[project.scripts]
llm = "llm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
